--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
 		"switching"
 	],
 	"dependencies": {
-		"append-type": "^1.0.2",
-		"es6-set": "^0.1.5"
+		"append-type": "^1.0.2"
 	},
 	"devDependencies": {
 		"@shinnn/eslint-config": "^6.8.9",
