use const, Symbol and template literals
[BREAKING] drop support for Node.js < 4

--- a/package.json
+++ b/package.json
@@ -38,11 +38,8 @@
 	"eslintConfig": {
 		"extends": "@shinnn",
 		"rules": {
-			"no-var": "off",
-			"prefer-arrow-callback": "off",
 			"prefer-rest-params": "off",
-			"prefer-spread": "off",
-			"prefer-template": "off"
+			"prefer-spread": "off"
 		}
 	},
 	"nyc": {
