--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 	"license": "ISC",
 	"scripts": {
 		"pretest": "eslint .",
-		"test": "nyc node test.js"
+		"test": "coverage test.mjs"
 	},
 	"files": [
 		"index.js"
@@ -29,16 +29,12 @@
 		"inspect-with-kind": "^1.0.5"
 	},
 	"devDependencies": {
-		"@shinnn/eslint-config": "^6.8.10",
-		"eslint": "^5.13.0",
-		"nyc": "^13.2.0",
-		"nyc-config-common": "^1.0.1",
+		"@shinnn/eslint-config": "^6.10.3",
+		"coverage": "^0.3.1",
+		"eslint": "^5.16.0",
 		"tape": "^4.10.0"
 	},
 	"eslintConfig": {
 		"extends": "@shinnn"
-	},
-	"nyc": {
-		"extends": "nyc-config-common"
 	}
 }
