--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "pause-fn",
 	"version": "1.0.0",
 	"description": "Pause/resume execution of a function",
-	"author": "Shinnosuke Watanabe (https://github.com/shinnn)",
+	"author": "Watanabe Shinnosuke (https://github.com/shinnn)",
 	"repository": "shinnn/pause-fn",
 	"license": "ISC",
 	"scripts": {
